<resources>
    <string name="app_name">Quiz App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="sign_in">Sign In</string>
    <string name="didn_t_have_an_account">Didn\'t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_details">User Details</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="home">Home</string>
    <string name="quiz_name">Quiz name</string>
    <string name="category">Category</string>
    <string name="quiz_details">Quiz Details</string>
    <string name="next">Next</string>
    <string name="question">Question</string>
    <string name="option">Option</string>
    <string name="submit">Submit</string>
    <string name="answer">Answer</string>
    <string name="logout">Logout</string>
</resources>