<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fullScreenDesign"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.fragments.home.QuizQuestionFragment">

    <EditText
        android:id="@+id/et_question"
        style="@style/edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/question"
        android:hint="@string/question"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_option_1"
        style="@style/edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/option"
        android:hint="@string/option"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_question" />

    <EditText
        android:id="@+id/et_option_2"
        style="@style/edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/option"
        android:hint="@string/option"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_option_1" />

    <EditText
        android:id="@+id/et_answer"
        style="@style/edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/answer"
        android:hint="@string/answer"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_option_2" />

    <TextView
        android:id="@+id/btn_save"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_answer" />

    <TextView
        android:id="@+id/btn_submit"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_save" />

</androidx.constraintlayout.widget.ConstraintLayout>